# Better-imdb

./: .gitignore  CLEANUP_TESTING.md  CRITICAL_FIX_REPORT.md  Dockerfile  Dockerfile.cenima  GITHUB_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_ANALYSIS.md  README.md  TESTING_CHECKLIST.md  TORRENT_FIXES.md  Text File.txt  VERCEL_HOSTING_GUIDE.md  VPS_DEPLOYMENT.md  auth.config.js  auth.js  betterimdb.service  check-services.sh  create-env.sh  docker-compose.yml  fix-firewall.sh  middleware.js  next.config.mjs  package-lock.json  package.json  plan.md  pnpm-lock.yaml  setup-vps.sh  start-dev.sh  start-vps.sh  start_api.sh  tsconfig.json  watcharr.db
.cf-pages/: _global-error.html  _not-found.html  index.html  lists.html
.devcontainer/: devcontainer.json
.github/: copilot-agent.md  copilot-instructions.md
app/: globals.css  layout.js  layout.tsx  page.js  page.tsx  template.js  template.tsx
cenima-cli/: .gitignore  main.py  pyproject.toml  requirements.txt
cenima-cli/cenima/: __init__.py  api.py  cli.py  config.py  models.py  processor.py  scraper.py
cenima-cli/node/: README.md  package-lock.json  package.json  test_flow_fixed.js
cenima-cli/node/src/: app.ts  config.ts
cenima-cli/node/src/services/: processor.ts  scraper.ts
cenima-cli/node/src/types/: index.ts
cenima-cli/node/src/utils/: helpers.ts
components/: FilterDropdown.js  FilterDropdown.tsx  FilterPanel.js  FilterPanel.tsx  FloatingNav.js  FloatingNav.tsx  ImdbIcon.js  MediaCard.js  MediaCard.tsx  Navbar.js  Providers.tsx  RatingSlider.tsx  Skeleton.js  Skeleton.tsx  StatusDropdown.tsx  StreamPlayer.js  StreamPlayer.tsx
lib/: ai-config.js  ai-config.ts  ai-tools.js  ai-tools.ts  amazon-image-loader.js  amazon-image-loader.ts  api-config.js  api-config.ts  api.js  api.ts  cleanup-utils.ts  copilot-client.js  db.js  db.ts  (+19 more)
(+143 files in other folders)
