[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cenima-cli"
version = "0.1"
description = "A CLI tool to browse and stream movies, series and anime in FHD in Arabic!"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "np4abdou1" }
]
keywords = ["movies", "streaming", "anime", "series", "arabic", "cli", "mpv", "fzf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "curl_cffi>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
cenima = "cenima.cli:main"
cenima-cli = "cenima.cli:main"

[project.urls]
Homepage = "https://github.com/np4abdou1/cenima-cli"
Repository = "https://github.com/np4abdou1/cenima-cli"
Issues = "https://github.com/np4abdou1/cenima-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cenima*"]

[tool.setuptools.package-data]
cenima = ["*.py"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
